--- a/src/app/components/connect/connect.component.html
+++ b/src/app/components/connect/connect.component.html
@@ -11,11 +11,11 @@
 
         <div class="image-grid">
             <div>
-                <a class="img1" target="_blank" href="https://www.instagram.com/"> </a>
+                <a class="img1 image-container" target="_blank" href="https://www.instagram.com/"> </a>
             </div>
             <div>
-                <a class="img2" target="_blank" href="https://www.instagram.com/"> </a>
-                <a class="img3" target="_blank" href="https://www.instagram.com/"></a>
+                <a class="img2 image-container" target="_blank" href="https://www.instagram.com/"> </a>
+                <a class="img3 image-container" target="_blank" href="https://www.instagram.com/"></a>
             </div>
         </div>
     </div>
