--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -52,16 +52,16 @@
             </div>
         </div>
         <div class="content-right">
-            <a>
+            <a href="/">
                 Home
             </a>
-            <a>
+            <a href="/menu">
                 Menu
             </a>
-            <a>
+            <a href="/place">
                 Place
             </a>
-            <a>
+            <a href="/item">
                 Item
             </a>
         </div>
