--- a/src/app/components/intro/intro.component.scss
+++ b/src/app/components/intro/intro.component.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
 
-    h1 {
+    .title {
         z-index: 2;
 
         font-size: 8vw;
@@ -18,6 +18,10 @@
         display: flex;
         flex-direction: column;
         text-align: center;
+
+        //For animation:
+        transform: translateY(100px);
+        opacity: 0;
     }
 
     .images-container {
