--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,1 +1,9 @@
-<p>menu works!</p>
+<app-menu-intro></app-menu-intro>
+<app-food></app-food>
+<app-speciality></app-speciality>
+
+<div class="separator">
+    <div class="line"></div>
+    <div class="dot"></div>
+</div>
+<app-connect></app-connect>
