Team page and place page

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -21,7 +21,7 @@
                     Phone: +123 456789
                 </a>
                 <a href="mailto:" target="_blank">
-                    E-Mail: info@sectra.com
+                    E-Mail: info@mangiare.com
                 </a>
             </div>
         </div>
