--- a/src/app/components/discover/discover.component.html
+++ b/src/app/components/discover/discover.component.html
@@ -30,8 +30,8 @@
                     innovative but healthy recipes
                 </h2>
                 <h3 class="description-subtitle">
-                    We work close to the best regional producersto bring you the best ingredients. Fresh and
-                    environment-friendly food to nurish your body and keep our planet safet.
+                    We work close to the best regional producers to bring you the best ingredients. Fresh and
+                    environment-friendly food to nurish your body and keep our planet safe.
                 </h3>
                 <a class="btn" href="/menu">
                     <div class="circle"> </div>
