--- a/src/app/components/discover/discover.component.scss
+++ b/src/app/components/discover/discover.component.scss
@@ -1,5 +1,8 @@
 #discover-section {
     width: 100%;
+    h2,h3{
+        font-weight: 400;
+    }
     .content {
         background-color: #b3c2af;
         display: flex;
