--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -61,8 +61,8 @@
             <a href="/place">
                 Place
             </a>
-            <a href="/item">
-                Item
+            <a href="/team">
+                Team
             </a>
         </div>
     </div>
