--- a/src/app/pages/place/place.component.html
+++ b/src/app/pages/place/place.component.html
@@ -1,1 +1,20 @@
-<p>place works!</p>
+<div id="place-page">
+    <app-place-intro></app-place-intro>
+
+    <div class="separator">
+        <div class="line"></div>
+        <div class="dot"></div>
+    </div>
+
+    <app-place-gallery></app-place-gallery>
+
+    <app-discover></app-discover>
+    <app-speciality></app-speciality>
+
+    <div class="separator">
+        <div class="line"></div>
+        <div class="dot"></div>
+    </div>
+
+    <app-connect></app-connect>
+</div>
