--- a/src/app/pages/team/team.component.html
+++ b/src/app/pages/team/team.component.html
@@ -1,1 +1,17 @@
-<p>team works!</p>
+<div id="team-page">
+    <app-team-intro></app-team-intro>
+    <div class="separator">
+        <div class="line"></div>
+        <div class="dot"></div>
+    </div>
+
+    <app-team-gallery></app-team-gallery>
+    <app-discover></app-discover>
+    <app-speciality></app-speciality>
+    <div class="separator">
+        <div class="line"></div>
+        <div class="dot"></div>
+    </div>
+
+    <app-connect></app-connect>
+</div>
